src/main/java/com/example/signalapp/error/MaxSizeExceptionParams.java
package com.example.signalapp.error;

public record MaxSizeExceptionParams(int maxSize) {
}
